--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 html, body {
     height: 100%;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Sarabun', sans-serif;
 }
 
 .bg-navbar{
@@ -42,10 +44,28 @@ html, body {
 }
 .footer{
     background: #313131;
-}
+    }
 
 .display-footer{
     font-size: 18px;
     font-weight: 300;
     line-height: 1.2;
+    color: #fff;
+}
+
+.news-page{
+    padding: 50px 100px;
+    box-shadow: 0px 0px 10px #a5a5a5a5;
+}
+
+@media(max-width: 991px){
+    .news-page{
+        padding: 40px 50px;
+    }
+}
+
+@media(max-width: 768px){
+    .news-page{
+        padding: 10px 10px;
+    }
 }
