--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,9 +53,11 @@ html, body {
     color: #fff;
 }
 
+/* document page */
 .news-page{
     padding: 50px 100px;
     box-shadow: 0px 0px 10px #a5a5a5a5;
+    margin-bottom: 30px;
 }
 
 @media(max-width: 991px){
@@ -68,4 +70,17 @@ html, body {
     .news-page{
         padding: 10px 10px;
     }
+}
+
+/* download-documnet */
+.download-document{
+    background: red;
+    padding: 10px 10px;
+    border-radius: 10px;
+    color: yellow;
+}
+
+.download-document > a:hover{
+    text-decoration: none;
+    color: pink;
 }
