--- a/1.FormValidator/FormValidation.css
+++ b/1.FormValidator/FormValidation.css
@@ -13,13 +13,13 @@
 }
 
 body {
-  background-color: #f9fafb;
+  background-color: #e1e6ec;
   font-family: "Open Sans", sans-serif;
+  font-weight: 300;
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  margin: 0;
 }
 
 .container {
@@ -30,6 +30,7 @@ body {
 }
 
 h2 {
+  font-weight: 600;
   text-align: center;
   margin: 0 0 20px;
 }
